stock tracker working version minus live updates

--- a/2013-10-08-Inventory-Firebase/index.haml
+++ b/2013-10-08-Inventory-Firebase/index.haml
@@ -22,6 +22,12 @@
       %input#save.button.small.radius{type: 'button', value: 'Save'}
 
   .row
+    .small-3.columns
+      %span Grand Total Value of Stuff:
+    .small-9
+      %span#total
+
+  .row
     .small-2.columns
       %input#name{type: 'text', autofocus: true, placeholder: 'Item Name'}
     .small-1.columns
