stocks tracker work in progress

--- a/2013-10-10-Stock-Market/index.haml
+++ b/2013-10-10-Stock-Market/index.haml
@@ -34,12 +34,14 @@
       %input#symbol{type: 'text', placeholder: 'input symbol'}
     .small-2.columns
       %input#quantity{type: 'text', placeholder: 'input quantity'}
-    .small-4.columns
+    .small-2.columns
       %input#buy.button.radius.small.success{type: 'button', value: 'Buy Stocks'}
+    .small-2.columns
+      %span Update Frequency:
     .small-2.columns
       %input#interval{type: 'text'}
     .small-2.columns
-      %input#etInterval.button.radius.small.success{type: 'button', value: 'Update Frequency'}
+      %input#setInterval.button.radius.small.success{type: 'button', value: 'Track Live Prices'}
 
   .row
     .small-12.columns
