address book project working version with mailto and remove glitches

--- a/2013-10-13-Address-Book/index.haml
+++ b/2013-10-13-Address-Book/index.haml
@@ -27,6 +27,11 @@
       %input#photo{type: 'text', placeholder: 'Image URL'}
     .small-2.columns
       %input#add.button.small.radius.success{type: 'button', value: 'Add Person!'}
+  .row
+    .small-12.columns
+      #people
+        .clear
+
 
   %script{src: 'js/vendor/jquery-1.10.2.js'}
   %script{src: 'js/vendor/foundation.min.js'}
