Updates color cells on to do list table

--- a/2013-10-29-TodoList/views/todo/index.jade
+++ b/2013-10-29-TodoList/views/todo/index.jade
@@ -16,7 +16,5 @@ block content
         each todo, index in todos
           tr
             each value, property in todo
-              td(class=property)=value
-              //- if (td('class: color'))
-              //- td(style='background-color: #{todo.color}')
+             td(class=property, style=property==="color"? "background-color:#{todo.color}" : "" )= value
 
