Adds POST form to movies database

--- a/2013-10-30-Express-Movies/less/app.less
+++ b/2013-10-30-Express-Movies/less/app.less
@@ -9,7 +9,20 @@ table{
 }
 #movies{
   img{
-    width: 100px;
-    height: 150px;
+    width: 80px;
+    height: 100px;
+  }
+}
+
+.field > label{
+  color: black;
+}
+
+.field > input{
+  border-radius: 10px;
+  background-color: @base + #222222;
+  color: @base +999999;
+  &:focus{
+    background-color: @base + #001133;
   }
 }
