--- a/2013-10-30-Express-Movies/views/movies/index.jade
+++ b/2013-10-30-Express-Movies/views/movies/index.jade
@@ -7,6 +7,7 @@ block content
   .row
     .small-2.columns
       a.button.small.radius(href='/') Home Page
+      a.button.small.radius(href='/movies/new') New Movie
     .small-10.columns
   .row
     .small-12.columns
