--- a/2013-10-31-Epress-Blog/views/posts/new.jade
+++ b/2013-10-31-Epress-Blog/views/posts/new.jade
@@ -11,7 +11,7 @@ block content
     .small-2.columns
       a.button.small.radius(href='/posts') Posts Page
     .small-2.columns
-      a.button.small.radius.success(href='/posts/new') New Page
+      a.button.small.radius.success(href='/posts/new') New Post Page
     .small-6.columns
 
   .row
