--- a/2013-11-01-Mix-Master/views/songs/index.jade
+++ b/2013-11-01-Mix-Master/views/songs/index.jade
@@ -4,3 +4,18 @@ block content
   .row
     .small-12.columns
       h1 Songs Page
+  .row
+    .small-12.columns
+      #songs
+        each song in songs
+          .song
+            h3= song.title
+            audio(src="/audios/#{song.filename}", controls=true)
+            p= song.duration
+            p= song.lyrics
+            img(src=song.art)
+            ul
+              each genre in song.genres
+                li= genre
+            p= song.createdAt
+
