--- a/2013-11-01-Mix-Master/less/app.less
+++ b/2013-11-01-Mix-Master/less/app.less
@@ -3,16 +3,52 @@
 
 body{
   background-color: @base;
+  h1{
+    font-family: Fredericka the Great;
+    text-align: centre;
+    color: grey;
+  }
 }
+.clear{
+  clear: both;
+}
+
+//*************************Header Template partial********************//
+
 .header{
   border: 5px solid grey;
   border-radius: 15px;
   margin-top: 30px;
-  h1{
+  h1.subheader{
     text-align: center;
     font-family: Fredericka the Great;
+    color: grey;
   }
 }
+//*************************Index Song Page********************//
+.headerWrapper{
+  text-align: center;
+}
+.song{
+  width: 32%;
+  float: left;
+  margin-left: 1%;
+}
+#songs{
+  border: 5px solid grey;
+  border-radius: 15px;
+  margin-bottom: 20px;
+  img{
+    width: 95%;
+    margin-bottom: 20px;
+  }
+  h3{
+    font-family: Fredericka the Great;
+    text-align: center;
+    color: grey;
+  }
+}
+
 //*************************New Song Page********************//
 legend{
   background-color: @base - #333333;
@@ -23,5 +59,23 @@ legend{
   border-radius: 15px;
   &:focus{
     background-color: @base - #111100;
+  }
+}
+
+//*************************Show Song Page********************//
+#songWrapper{
+  border: 5px solid grey;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  // background-color: @base + #111111;
+  img{
+    width: 95%;
+    border-radius: 15px;
+    margin-bottom: 20px;
+  }
+  .relative{
+    position: relative;
+    left: 80px;
+    margin-top: 20px;
   }
 }
