--- a/2013-11-01-Mix-Master/views/home/index.jade
+++ b/2013-11-01-Mix-Master/views/home/index.jade
@@ -2,5 +2,6 @@ extends ../template/layout
 
 block content
   .row
-    .small-12.columns
-      h1 Home Page
+    .small-4.columns.small-offset-4.columns
+      .headerWrapper
+        h1.subheader Home Page
