--- a/2013-11-01-Mix-Master/views/songs/new.jade
+++ b/2013-11-01-Mix-Master/views/songs/new.jade
@@ -3,8 +3,9 @@ include ../mixins/form-helper
 
 block content
   .row
-    .small-12.columns
-      h1.subheader New Song Page
+    .small-6.columns.small-offset-3.columns
+      .headerWrapper
+        h1.subheader New Song Page
   .row
     .small-12.columns
       form#newSong(action='/songs', method='post')
