--- a/2013-11-01-Mix-Master/views/template/navbar.jade
+++ b/2013-11-01-Mix-Master/views/template/navbar.jade
@@ -1,8 +1,12 @@
 .row.nav
-  .small-2.columns.small-offset-3
+  .small-2.columns.small-offset-1
       a.button.small.radius.expand(href='/') Home Page
   .small-2.columns
       a.button.small.radius.expand(href='/songs') Songs Page
   .small-2.columns
       a.button.small.radius.expand(href='/songs/new') New Song Page
-  .small-3.columns
+  .small-2.columns
+      a.button.small.radius.expand(href='/artists') Artists Page
+  .small-2.columns
+      a.button.small.radius.expand(href='/artists/new') New Artist Page
+  .small-1.columns
