--- a/2013-11-01-Mix-Master/views/template/navbar.jade
+++ b/2013-11-01-Mix-Master/views/template/navbar.jade
@@ -1,12 +1,16 @@
 .row.nav
-  .small-2.columns.small-offset-1
-      a.button.small.radius.expand(href='/') Home Page
+  .small-1.columns.small-offset-1
+      a.button.small.radius.expand(href='/') Home
+  .small-1.columns
+      a.button.small.radius.expand(href='/songs') Songs
   .small-2.columns
-      a.button.small.radius.expand(href='/songs') Songs Page
+      a.button.small.radius.expand(href='/songs/new') New Song
+  .small-1.columns
+      a.button.small.radius.expand(href='/artists') Artists
   .small-2.columns
-      a.button.small.radius.expand(href='/songs/new') New Song Page
+      a.button.small.radius.expand(href='/artists/new') New Artist
+  .small-1.columns
+    a.button.small.radius.expand(href='/genres') Genres
   .small-2.columns
-      a.button.small.radius.expand(href='/artists') Artists Page
-  .small-2.columns
-      a.button.small.radius.expand(href='/artists/new') New Artist Page
+    a.button.small.radius.expand(href='/genres/new') New Genre
   .small-1.columns
