--- a/2013-11-01-Mix-Master/views/artists/new.jade
+++ b/2013-11-01-Mix-Master/views/artists/new.jade
@@ -3,6 +3,30 @@ include ../mixins/form-helper
 
 block content
   .row
+    .small-12.columns
+      include ../template/errors
+  .row
     .small-6.columns.small-offset-3.columns
       .headerWrapper
         h1.subheader New Artist Page
+  .row
+    .small-12.columns
+      form#newArtist(action='/artists', method='post')
+        fieldset
+          legend New Artist
+          .row
+            mixin field(4, 'name', 'Name', null, null, true)
+            mixin field(4, 'website', 'Website')
+            mixin field(4, 'photo', 'Photograph')
+          .row
+            .small-12.columns
+              label(for='bio') Bio:
+              textarea#bio(name='bio')
+          .row
+            .small-12.columns
+              //- each song in songs
+              //-   input(type='checkbox', value=song.id, name='songs')
+              //-   span= song.title
+          .row
+            .small-2.columns.small-offset-8: a.button.radius.alert.small.expand(href='/artists') Cancel
+            .small-2.columns: button.radius.success.small.expand(type='submit') Save Artist
