--- a/2013-11-01-Mix-Master/views/songs/new.jade
+++ b/2013-11-01-Mix-Master/views/songs/new.jade
@@ -3,6 +3,9 @@ include ../mixins/form-helper
 
 block content
   .row
+    .small-12.columns
+      include ../template/errors
+  .row
     .small-6.columns.small-offset-3.columns
       .headerWrapper
         h1.subheader New Song Page
