--- a/2013-11-01-Mix-Master/views/artists/edit.jade
+++ b/2013-11-01-Mix-Master/views/artists/edit.jade
@@ -1,29 +1,29 @@
-//- extends ../template/layout
-//- include ../mixins/form-helper
+extends ../template/layout
+include ../mixins/form-helper
 
-//- block content
-//-   .row
-//-     .small-6.columns.small-offset-3.columns
-//-       .headerWrapper
-//-         h1.subheader Edit Artist Page
-//-   .row
-//-     .small-12.columns
-//-       form#editArtist(action='/artists/:id', method='put')
-//-         fieldset
-//-           legend New Artist
-//-           .row
-//-             mixin field(4, 'name', 'Name', null, null, true)
-//-             mixin field(4, 'website', 'Website')
-//-             mixin field(4, 'photo', 'Photograph')
-//-           .row
-//-             .small-12.columns
-//-               label(for='bio') Bio:
-//-               textarea#bio(name='bio')
-//-           .row
-//-             .small-12.columns
-//-                 each song in songs
-//-                   input(type='checkbox', value=song.id, name='songs')
-//-                   span= song.title
-//-           .row
-//-             .small-2.columns.small-offset-8: a.button.radius.alert.small.expand(href='/artists') Cancel
-//-             .small-2.columns: button.radius.success.small.expand(type='submit') Save Artist
+block content
+  .row
+    .small-6.columns.small-offset-3.columns
+      .headerWrapper
+        h1.subheader Edit Artist Page
+  .row
+    .small-12.columns
+      form#editArtist(action='/artists/:id', method='put')
+        fieldset
+          legend New Artist
+          .row
+            mixin field(4, 'name', 'Name', null, null, true)
+            mixin field(4, 'website', 'Website')
+            mixin field(4, 'photo', 'Photograph')
+          .row
+            .small-12.columns
+              label(for='bio') Bio:
+              textarea#bio(name='bio')
+          .row
+            .small-12.columns
+                each song in songs
+                  input(type='checkbox', value=song.id, name='songs')
+                  span= song.title
+          .row
+            .small-2.columns.small-offset-8: a.button.radius.alert.small.expand(href='/artists') Cancel
+            .small-2.columns: button.radius.success.small.expand(type='submit') Save Artist
