--- a/2013-11-01-Mix-Master/views/artists/new.jade
+++ b/2013-11-01-Mix-Master/views/artists/new.jade
@@ -24,9 +24,9 @@ block content
               textarea#bio(name='bio')
           .row
             .small-12.columns
-              //- each song in songs
-              //-   input(type='checkbox', value=song.id, name='songs')
-              //-   span= song.title
+              each song in songs
+                input(type='checkbox', value=song.id, name='songs')
+                span= song.title
           .row
             .small-2.columns.small-offset-8: a.button.radius.alert.small.expand(href='/artists') Cancel
             .small-2.columns: button.radius.success.small.expand(type='submit') Save Artist
